<resources>
    <string name="app_name">Inventory</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <string name="action_delete_all_items">Delete All Items</string>

    <!-- Title for the activity to add a new Item [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_Item">Add an Item</string>

    <!-- Label for editor menu option to save item and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current item [CHAR LIMIT=20] -->
    <string name="action_delete_item">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="supplier_overview">Supplier Info</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_Item_name">Item Name</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_quantity">Item Quantity</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_item_price">Item Price</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supp_phone">Phone Number:</string>

    <string name="inventory_app">Inventory App</string>
    <string name="item_details">Item Details</string>

    <string name="delete_items_failed">Delete Item Failed</string>
    <string name="delete_items_successful">Delete Items Successful</string>
    <string name="no_items_to_delete">There are no Items to Delete</string>
    <string name="delete_dialog_msg_all">Are You Sure You Want to Delete this item?</string>
    <string name="details_activity_label">Item details</string>




    <!-- Toast message in editor when new item has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_item_successful">New Item Added</string>

    <!-- Toast message in editor when new item has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_item_failed">Error with saving item</string>

    <!-- Title text for the empty view, which describes the empty inventory [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add an item [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding items</string>

    <!-- Subtitle text for the empty view that prompts the user to add an item [CHAR LIMIT=50] -->
    <string name="editor_title_edit_item">Edit Item</string>

    <!-- Toast message in editor when current item was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_item_successful">Item updated</string>

    <!-- Toast message in editor when current item has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_item_failed">Error with updating Item</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current item [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current item was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_item_successful">Item deleted</string>

    <!-- Toast message in editor when current item has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_item_failed">Error with deleting item</string>

    <!-- Dialog message to ask the user to confirm deleting the current item [CHAR LIMIT=NONE] -->
    <string name="delete_all_data_dialog_msg">ATTENTION: Sure you want to delete all items permanently?</string>

    <!-- Dialog message to ask the user to confirm deleting the current item [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this item?</string>

    <!-- Dialog button text for the option to confirm deleting the current item [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current item [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <string name="fill_in_the_fields">Please fill in all the fields or press Back to see your Inventory</string>

    <string name="empty_title">Please fill in the title of the Item</string>
    <string name="empty_price">Please fill in the price of the Item</string>
    <string name="empty_quantity">Please fill in the quantity of the item</string>
    <string name="empty_sup_name">Please fill in the Supplier\'s Name</string>
    <string name="empty_sup_number">Please fill in the Supplier\'s phone</string>
    <string name="minus_symbol">-</string>
    <string name="plus_symbol">+</string>


    <string name="price_currency">Price: €\u0020</string>
    <string name="edit">EDIT</string>
    <string name="done">done</string>
    <string name="order">order</string>
    <string name="title">Title</string>
    <string name="item_price">Item Price €</string>
    <string name="supplier_underlined">Supplier Details</string>
    <string name="name">Supplier Name</string>
    <string name="number">Supplier Number</string>
    <string name="quantity">Quantity</string>
    <string name="sale_button">sale</string>
</resources>
